--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,19 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Sign In</h1>
+
+    <form action="/auth/signin" method="post">
+
+        <p>Username</p>
+        <input type="text">
+
+        <p>Username</p>
+        <input type="password">
+
+        <button type="submit">Login</button>
+        
+
+    </form>
 </body>
 </html>
