--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,16 +10,15 @@
 <body>
     <h1>Sign In</h1>
 
-    <form action="/auth/signin" method="post">
+    <form action="/auth/signin" method="POST">
 
         <p>Username</p>
-        <input type="text">
+        <input id="username" name="username" type="text">
 
-        <p>Username</p>
-        <input type="password">
+        <p>Password</p>
+        <input name="pass" type="password">
 
         <button type="submit">Login</button>
-        
 
     </form>
 </body>
