Removed AuthRoutes and moved all its routes to the UserRoutes file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 <body>
     <h1>Sign In</h1>
 
-    <form action="/auth/signin" method="POST">
+    <form action="/users/signin" method="POST">
 
         <p>Username</p>
         <input id="username" name="username" type="text">
