--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,6 +17,12 @@
     <h3>Referrals Left</h3>
     <p><%= user.referralsLeft %> </p>
 
+    <button>
+        <a href="/users/logout">
+            Logout
+        </a>
+    </button>
+
     
     
 </body>
