New posts can now be created by users

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,6 +18,12 @@
     <p><%= user.referralsLeft %> </p>
 
     <button>
+        <a href="/posts/create">
+            Post Something
+        </a>
+    </button>
+
+    <button>
         <a href="/users/logout">
             Logout
         </a>
