--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= user.username %> </title>
+    <title>
+        <%= user.username %>
+    </title>
 </head>
+
 <body>
 
     <h3>Username</h3>
-    <p><%= user.username %> </p>
+    <p>
+        <%= user.username %>
+    </p>
 
     <h3>Email</h3>
-    <p><%= user.email %> </p>
+    <p>
+        <%= user.email %>
+    </p>
 
     <h3>Referrals Left</h3>
-    <p><%= user.referralsLeft %> </p>
+    <p>
+        <%= user.referralsLeft %>
+    </p>
 
     <button>
         <a href="/posts/create">
@@ -29,7 +39,38 @@
         </a>
     </button>
 
-    
-    
+    <hr>
+
+    <h1>Your wall</h1>
+
+    <% if(posts.length < 1){ %>
+        <h3>you have not posted anything</h3>
+    <% } else{ %>
+
+        <% posts.forEach(e=> { %>
+            <div class="post">
+                <p><strong>
+                    <%= e.title %> 
+                </strong></p>
+
+                <p><%= e.body %> </p>
+
+            </div>
+
+        <% }) %>
+    <% } %>
+
+
+
+
 </body>
+
+<style>
+    .post{
+        border: 2px solid black;
+        padding: 2%;
+        margin: 10%;
+    }
+</style>
+
 </html>
