Changed static files path

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/fixes.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>
         <%= user.username %>
     </title>
@@ -72,25 +74,7 @@
         margin: 10%;
     }
 
-    .dont-break-out {
-
-        /* These are technically the same, but use both */
-        overflow-wrap: break-word;
-        word-wrap: break-word;
-      
-        -ms-word-break: break-all;
-        /* This is the dangerous one in WebKit, as it breaks things wherever */
-        word-break: break-all;
-        /* Instead use this non-standard one: */
-        word-break: break-word;
-      
-        /* Adds a hyphen where the word breaks, if supported (No Blink) */
-        -ms-hyphens: auto;
-        -moz-hyphens: auto;
-        -webkit-hyphens: auto;
-        hyphens: auto;
-      
-      }
+    
 </style>
 
 <script>
