Implemented message view for unauthorized "create post" route

--- a/views/message.ejs
+++ b/views/message.ejs
@@ -16,7 +16,11 @@
         <h1>
             <%= msg %>
         </h1>
-        <% }) %>
+    <% }) %>
+
+    <button><a href="/">Login Page</a></button>
+    <button><a href="/users/home">Home Page</a></button>
+
 
 </body>
 
